crates/skyjoust_stateright_validator/tests/snapshots/trace_snapshots__reward_commit_before_final_score_matches_failure_snapshot.snap
---
source: crates/skyjoust_stateright_validator/tests/trace_snapshots.rs
expression: result.failure
---
{
  "step_index": 2,
  "action": "CommitRewards",
  "reason": "action was not legal from the current state"
}
